--- a/style.css
+++ b/style.css
@@ -51,3 +51,12 @@ button {
   color: white;
   box-shadow: 6px 6px 10px rgba(235, 228, 228, 0.5);
 }
+@media screen and (max-width: 330px) {
+  .calculator {
+    width: 250px;
+    height: 370px;
+  }
+  button {
+    margin: 4px;
+  }
+}
